# django-template

./: .gitignore  README.md  docker-compose.yml  pgadmin.config.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: class_based_views.md  function_view.md
.github/workflows/: auto-assign.yml  run-linters.yml
docker/db/: postgres.init.sql
static/: index.html
